# one-sharp

./: CHANGELOG.md  README.md  one-sharp.cabal
src/: Main.hs  OSType.hs  Parse.hs
test/: Main.hs  ParseTest.hs
