cabal-version:       >=1.10
name:                one-sharp
version:             0.1.0.0
synopsis:            OneSharp interpreter
-- description:
license:             BSD3
license-file:        LICENSE
author:              Turab Jafri
maintainer:          trajafri@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Main,
                       Parse,
                       OSType
  build-depends:       base >=4.12 && <4.13,
                       containers >=0.6 && <0.7,
                       megaparsec >=7.0.5 && <7.1,
                       mtl >=2.2 && <2.3,
                       optparse-applicative >=0.15 && <0.16,
                       text >=1.2 && <1.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

executable one-sharp
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       optparse-applicative >=0.15 && <0.16
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


test-suite onesharp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Parse
  build-depends:       base >=4.12 && <4.13,
                       mtl >= 2.2.2,
                       one-sharp, 
                       tasty >= 1.2.3 && < 1.3.0,
                       tasty-hunit >= 0.10.0 && < 0.11.0,
                       text >= 1.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
